<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anytime-icp</name>
  <version>1.0.0</version>
  <description>Anytime Iterative Closest Point Estimator</description>
  <maintainer email="sgangadh@andrew.cmu.edu">f1tenth3</maintainer>
  <license>Apache 2.0 license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>ackermann_msgs</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>nav_msgs</buildtool_depend>
  <buildtool_depend>nav2_msgs</buildtool_depend>
  <buildtool_depend>tf2_ros</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>message_filters</buildtool_depend>
  <buildtool_depend>Eigen3</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>